# crypto_options_agg

./: .env.exam  .env.example  .gitignore  API_DOCS.md  CLAUDE.md  Caddyfile  README.md  bybit_delta.py  bybit_options.py  bybit_theta.py  compose.prod.yml  compose.yml  ecosystem.config.js  okx_options_ws.py  plan.md  prometheus.yml  research.md  start.sh  verify-parity.sh
archive/: start-rust.sh
backend/: .env.example  bybit-portfolio.test.mjs  derive-compare.mjs  derive-test.mjs  env-loading.test.mjs  okx-portfolio.test.mjs  package-lock.json  polymarket-classification.test.mjs  polymarket-client.test.mjs  polymarket-distribution.test.mjs  polymarket-route.test.mjs  polymarket-service.test.mjs  polymarket-sse-fanout.test.mjs  public-mode-routes.test.mjs  rate-limit.test.mjs  raw-surface.test.mjs  server.js
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: cache.rs  config.rs  main.rs  rate_limit.rs  sse.rs  state.rs
backend-rust/src/analysis/: arbs.rs  mod.rs  scanners.rs  svi.rs
backend-rust/src/exchanges/: binance.rs  bybit.rs  combined.rs  deribit.rs  derive.rs  futures.rs  mod.rs  okx.rs  polymarket.rs
backend-rust/src/optional/: bybit_portfolio.rs  mod.rs  okx_portfolio.rs  optimizer.rs
backend-rust/src/routes/: analysis.rs  arbs.rs  binance.rs  bybit.rs  combined.rs  deribit.rs  derive.rs  futures.rs  health.rs  mod.rs  okx.rs  polymarket.rs  scanners.rs  stream.rs
backend-rust/ws-testing/: README.md
backend-rust/ws-testing/reports/: bybit.json  bybit.md  deribit.json  deribit.md  okx.json  okx.md
frontend/: Dockerfile  balanceVisibility.test.mjs  chainHeaderStructure.test.mjs  contractSizes.test.mjs  fetchJson.test.mjs  frontend-features.md  hosted-paths.test.mjs  liveCloseoutPricing.test.mjs  liveCombinedAnalysis.test.mjs  mixedSimulator.test.mjs  next.config.js  optionsChainLayout.test.mjs  package-lock.json  package.json  polysis.test.mjs  (+7 more)
(+134 files in other folders)
