[package]
name = "options-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "options-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tokio-util = "0.7"
anyhow = "1"
regex = "1"
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[profile.dev]
# Work around a Rust 1.94 incremental compilation ICE hit during local `cargo run`.
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
